// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders ordered list 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <ol
      class="text-[0.875rem] text-black mt-1 list-decimal pl-4"
      data-testid="ordered-list"
    >
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N5
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`List renders unordered list 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <ul
      class="text-[0.875rem] text-black mt-1 list-disc pl-4"
      data-testid="unordered-list"
    >
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N1
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N2
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N3
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N4
          </div>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="flex mt-1"
        >
          <div
            class="m-0 text-md text-graphite font-regular pl-2"
          >
            list item N5
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
